[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spikedist"
version = "0.6.0"
description = "Spike-train distance and similarity metrics (Victor-Purpura, van Rossum, multi-unit van Rossum, Schreiber, Hunter-Milton, ISI-distance) in pure Python with zero dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Amaar Chughtai" }]
keywords = [
  "spike-train",
  "neuroscience",
  "computational-neuroscience",
  "neuromorphic",
  "victor-purpura",
  "van-rossum",
  "spike-distance",
  "spike-metric",
  "spiking-neural-networks",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "hypothesis>=6"]
fast = ["numpy>=1.21"]

[project.urls]
Homepage = "https://github.com/amaar-mc/spikedist"
Repository = "https://github.com/amaar-mc/spikedist"
Issues = "https://github.com/amaar-mc/spikedist/issues"
Changelog = "https://github.com/amaar-mc/spikedist/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/spikedist"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["numpy.*"]
ignore_missing_imports = true
